force-app/main/default/objects/Case/fields/Brand_Logo_HEX_Code_received__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo_HEX_Code_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Logo &amp; HEX Code Received</label>
    <type>Checkbox</type>
</CustomField>