force-app/main/default/objects/Case/fields/Brand_Logo_HEX_Code_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo_HEX_Code_Received_Date__c</fullName>
    <label>Brand Logo &amp; HEX Code Received Date</label>
    <type>Date</type>
</CustomField>