force-app/main/default/objects/Case/fields/Bulk_Data_Import__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Data_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Data Import</label>
    <type>Checkbox</type>
</CustomField>