force-app/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company closed/dormant</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Duplicate/test</fullName>
            </value>
            <value>
                <fullName>No work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PAYE/umbrella</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Policy unsuitable</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Run-off cover purchased</fullName>
            </value>
            <value>
                <fullName>Financial Difficulty</fullName>
            </value>
            <value>
                <fullName>Cancel Re-Setup</fullName>
            </value>
            <value>
                <fullName>Saved Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>