force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
                <default>true</default>
                <label>Customer Service</label>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>IR 35</fullName>
                <label>IR35 Tool</label>
            </value>
            <value>
                <fullName>Off-Payroll Protect</fullName>
            </value>
            <value>
                <fullName>IR35 Contract Review</fullName>
            </value>
            <value>
                <fullName>Customer Accounts Team</fullName>
                <isActive>false</isActive>
                <label>Customer Accounts Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>