force-app/main/default/objects/Case/fields/Case_Unique_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Case_Unique_ID_Legacy__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Case Unique ID (Legacy)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>