force-app/main/default/objects/Case/fields/CaseToLeadEmail__c.field-meta.xml
<CustomField>
    <fullName>CaseToLeadEmail__c</fullName>
    <formula>Related_Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseToLeadEmail</label>
    <type>Text</type>
</CustomField>