force-app/main/default/objects/Case/fields/CaseToLeadFirstName__c.field-meta.xml
<CustomField>
    <fullName>CaseToLeadFirstName__c</fullName>
    <formula>Related_Lead__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseToLeadFirstName</label>
    <type>Text</type>
</CustomField>