force-app/main/default/objects/Case/fields/CaseToLeadLastName__c.field-meta.xml
<CustomField>
    <fullName>CaseToLeadLastName__c</fullName>
    <formula>Related_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseToLeadLastName</label>
    <type>Text</type>
</CustomField>