force-app/main/default/objects/Case/fields/CaseToLeadPhone__c.field-meta.xml
<CustomField>
    <fullName>CaseToLeadPhone__c</fullName>
    <formula>Related_Lead__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseToLeadPhone</label>
    <type>Text</type>
</CustomField>