force-app/main/default/objects/Case/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Change of details</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Payment query</fullName>
            </value>
            <value>
                <fullName>Mid term amendment</fullName>
            </value>
            <value>
                <fullName>Sales enquiry</fullName>
            </value>
            <value>
                <fullName>Promotional query</fullName>
            </value>
            <value>
                <fullName>Renewal enquiry</fullName>
            </value>
            <value>
                <fullName>Rubbish/junk/internal comms</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Ir35/Contract/ status review</fullName>
            </value>
            <value>
                <fullName>General enquiry</fullName>
            </value>
            <value>
                <fullName>Saved Sale</fullName>
            </value>
            <value>
                <fullName>Sales processing error</fullName>
            </value>
            <value>
                <fullName>Offline Payment</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Referral - Approved</fullName>
            </value>
            <value>
                <fullName>Referral - Declined</fullName>
            </value>
            <value>
                <fullName>Referral Approved</fullName>
                <isActive>false</isActive>
                <label>Referral Approved</label>
            </value>
            <value>
                <fullName>Referral Declined</fullName>
                <isActive>false</isActive>
                <label>Referral Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>