force-app/main/default/objects/Case/fields/CST_With_Insurer__c.field-meta.xml
<CustomField>
    <fullName>CST_With_Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CST (With Insurer)</label>
    <referenceTo>Case_Stage_Timer__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>