force-app/main/default/objects/Case/fields/First_Response_Not_Complaint_Due__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Not_Complaint_Due__c</fullName>
    <formula>IF(
    NOT(Record_Type_Name__c = &quot;Complaint&quot;),
    DATETIMEVALUE(
        TEXT(
            CASE(
                MOD(WEEKDAY(DATEVALUE(CreatedDate) + 1), 7),
                7, DATEVALUE(CreatedDate) + 3,  /* Saturday → Monday */
                1, DATEVALUE(CreatedDate) + 2,  /* Sunday → Monday */
                DATEVALUE(CreatedDate) + 1      /* Weekday → next day */
            )
        ) &amp; &quot; 17:30:00&quot;
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response Not Complaint Due</label>
    <type>DateTime</type>
</CustomField>