force-app/main/default/objects/Case/fields/First_Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>First_Response_SLA__c</fullName>
    <label>First Response SLA</label>
    <type>DateTime</type>
</CustomField>