force-app/main/default/objects/Case/fields/Hide_IR35_Setup_Complete_Button__c.field-meta.xml
<CustomField>
    <fullName>Hide_IR35_Setup_Complete_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide IR35 Setup Complete Button</label>
    <type>Checkbox</type>
</CustomField>