force-app/main/default/objects/Case/fields/Implementation_completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_completed_Date__c</fullName>
    <description>This field is used to determine when the Implementation case was closed the first time</description>
    <label>Implementation completed Date</label>
    <type>Date</type>
</CustomField>