force-app/main/default/objects/Case/fields/Initial_Implementation_completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Implementation_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine that the Implementation case was closed initially</description>
    <label>Initial Implementation completed</label>
    <type>Checkbox</type>
</CustomField>