force-app/main/default/objects/Case/fields/INSTANDA_Claims_ID__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_Claims_ID__c</fullName>
    <externalId>true</externalId>
    <label>INSTANDA Claims ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>