force-app/main/default/objects/Case/fields/INSTANDA_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_Quote_ID__c</fullName>
    <label>INSTANDA Quote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>