force-app/main/default/objects/Case/fields/INSTANDA_Sales_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_Sales_Person_Email__c</fullName>
    <label>INSTANDA Sales Person Email</label>
    <type>Email</type>
</CustomField>