force-app/main/default/objects/Case/fields/Number_of_Open_Claims__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Claims__c</fullName>
    <formula>Account.Number_of_Open_Claims__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Open Claims</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>