force-app/main/default/objects/Case/fields/OPP_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>OPP_Owner_Name__c</fullName>
    <description>Formula field used to filter Case List Views by the related Opportunity Owner.</description>
    <formula>Opportunity__r.OPP_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Owner Name</label>
    <type>Text</type>
</CustomField>