force-app/main/default/objects/Case/fields/Payment_Failure_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Failure_Type__c</fullName>
    <label>Payment Failure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Payment</fullName>
            </value>
            <value>
                <fullName>Midterm Missed Payment</fullName>
            </value>
            <value>
                <fullName>NTU</fullName>
            </value>
            <value>
                <fullName>Shortfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>