force-app/main/default/objects/Case/fields/Policy_INSTANDA_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_INSTANDA_Quote_Id__c</fullName>
    <formula>Policy__r.INSTANDA_Quote_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy INSTANDA Quote Id</label>
    <type>Text</type>
</CustomField>