force-app/main/default/objects/Case/fields/Sale_Saved__c.field-meta.xml
<CustomField>
    <fullName>Sale_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This custom field will be used when sale is saved</description>
    <label>Sale Saved</label>
    <type>Checkbox</type>
</CustomField>