force-app/main/default/objects/Case/fields/Set_up_Partner_on_Xero__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Partner_on_Xero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set up Partner on Xero</label>
    <type>Checkbox</type>
</CustomField>