force-app/main/default/objects/Case/fields/Set_up_Partner_on_Xero_Date__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Partner_on_Xero_Date__c</fullName>
    <label>Set up Partner on Xero Date</label>
    <type>Date</type>
</CustomField>