force-app/main/default/objects/Case/fields/SLA_Timer__c.field-meta.xml
<CustomField>
    <fullName>SLA_Timer__c</fullName>
    <label>SLA Timer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>