force-app/main/default/objects/Case/fields/SLA_Timer_Image__c.field-meta.xml
<CustomField>
    <fullName>SLA_Timer_Image__c</fullName>
    <formula>CASE(SLA_Timer__c,
&apos;Green&apos;,&apos;🟢&apos;,
&apos;Yellow&apos;,&apos;🟡&apos;,
&apos;Red&apos;,&apos;🔴&apos;,
&apos;🔴&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Timer</label>
    <type>Text</type>
</CustomField>