force-app/main/default/objects/Case/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convictions/Declined Insurance</fullName>
            </value>
            <value>
                <fullName>Crane Roles</fullName>
            </value>
            <value>
                <fullName>Heat work and High Voltage</fullName>
            </value>
            <value>
                <fullName>Business Equipment</fullName>
            </value>
            <value>
                <fullName>Higher PI PL / Increased PI PL</fullName>
            </value>
            <value>
                <fullName>Job role / Job Role Addition</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Company name change</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Subcontractors</fullName>
            </value>
            <value>
                <fullName>Bankruptcy/Admin</fullName>
            </value>
            <value>
                <fullName>Turnover / Increased Income</fullName>
            </value>
            <value>
                <fullName>Manual work/Height work</fullName>
            </value>
            <value>
                <fullName>USA Physical</fullName>
            </value>
            <value>
                <fullName>USA Contract</fullName>
            </value>
            <value>
                <fullName>RICS</fullName>
            </value>
            <value>
                <fullName>SME End Client – Need changing in future</fullName>
            </value>
            <value>
                <fullName>Run Off</fullName>
            </value>
            <value>
                <fullName>Policy Extensions</fullName>
            </value>
            <value>
                <fullName>Employee/Fee Earner Count</fullName>
            </value>
            <value>
                <fullName>Admiral Request</fullName>
            </value>
            <value>
                <fullName>Underwriting request - General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>