force-app/main/default/objects/Case/fields/T_C_s_Policy_Schedules_Provided__c.field-meta.xml
<CustomField>
    <fullName>T_C_s_Policy_Schedules_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;C’s &amp; Policy Schedules Provided</label>
    <type>Checkbox</type>
</CustomField>