force-app/main/default/objects/Case/fields/T_C_s_Policy_Schedules_Provided_Date__c.field-meta.xml
<CustomField>
    <fullName>T_C_s_Policy_Schedules_Provided_Date__c</fullName>
    <label>T&amp;C’s &amp; Policy Schedules Provided Date</label>
    <type>Date</type>
</CustomField>