force-app/main/default/objects/Case/fields/test_date_time__c.field-meta.xml
<CustomField>
    <fullName>test_date_time__c</fullName>
    <label>test date/time</label>
    <type>DateTime</type>
</CustomField>