force-app/main/default/objects/Case/fields/test_date_UTC__c.field-meta.xml
<CustomField>
    <fullName>test_date_UTC__c</fullName>
    <formula>LEFT(TEXT(test_date_time__c), 16)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test date UTC</label>
    <type>Text</type>
</CustomField>