force-app/main/default/objects/Case/fields/test_UTC__c.field-meta.xml
<CustomField>
    <fullName>test_UTC__c</fullName>
    <formula>TIMEVALUE(test_date_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test UTC</label>
    <type>Time</type>
</CustomField>