force-app/main/default/objects/Case/fields/Time_with_Insurer_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_with_Insurer_Business_Days__c</fullName>
    <label>Time with Insurer (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>