force-app/main/default/objects/Case/fields/Time_with_Insurer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_with_Insurer_Hours__c</fullName>
    <label>Time with Insurer (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>