force-app/main/default/objects/Case/fields/Training_session_arranged__c.field-meta.xml
<CustomField>
    <fullName>Training_session_arranged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Session Arranged</label>
    <type>Checkbox</type>
</CustomField>