force-app/main/default/objects/Case/fields/Training_Session_Arranged_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Session_Arranged_Date__c</fullName>
    <label>Training Session Arranged Date</label>
    <type>Date</type>
</CustomField>