force-app/main/default/objects/Case/fields/Use_Active_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Use_Active_Assignment_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this checkbox is ticked the Case will be assigned to the corresponding Case Queue based on the Record Type and will not be assigned to the user creating the record.</inlineHelpText>
    <label>Use Active Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>