force-app/main/default/objects/Case/fields/Vulnerable__c.field-meta.xml
<CustomField>
    <fullName>Vulnerable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Flag</label>
    <type>Checkbox</type>
</CustomField>