force-app/main/default/objects/Case/fields/White_Labelling_of_tool_completed__c.field-meta.xml
<CustomField>
    <fullName>White_Labelling_of_tool_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White Labelling of tool Completed</label>
    <type>Checkbox</type>
</CustomField>