force-app/main/default/objects/Case/fields/White_Labelling_of_tool_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>White_Labelling_of_tool_Completed_Date__c</fullName>
    <label>White Labelling of tool Completed Date</label>
    <type>Date</type>
</CustomField>