force-app/main/default/objects/Case/recordTypes/Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Cancellation</fullName>
    <active>true</active>
    <businessProcess>Cancellation</businessProcess>
    <label>Cancellation</label>
</RecordType>