force-app/main/default/objects/Case/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <businessProcess>Complaint</businessProcess>
    <label>Complaint</label>
</RecordType>