force-app/main/default/objects/Case/recordTypes/Implementation.recordType-meta.xml
<RecordType>
    <fullName>Implementation</fullName>
    <active>true</active>
    <businessProcess>Implementation</businessProcess>
    <label>Implementation</label>
</RecordType>