force-app/main/default/objects/Case/recordTypes/Missed_Failed_Payment.recordType-meta.xml
<RecordType>
    <fullName>Missed_Failed_Payment</fullName>
    <active>true</active>
    <businessProcess>Missed%2FFailed Payment</businessProcess>
    <label>Missed/Failed Payment</label>
</RecordType>