force-app/main/default/objects/Case/recordTypes/Renewals.recordType-meta.xml
<RecordType>
    <fullName>Renewals</fullName>
    <active>true</active>
    <businessProcess>Renewals</businessProcess>
    <label>Renewals</label>
</RecordType>