force-app/main/default/objects/Case/recordTypes/Underwriting.recordType-meta.xml
<RecordType>
    <fullName>Underwriting</fullName>
    <active>true</active>
    <businessProcess>Underwriting</businessProcess>
    <label>Underwriting</label>
</RecordType>