force-app/main/default/objects/Case/validationRules/CV1_CaseSubType.validationRule-meta.xml
<ValidationRule>
    <fullName>CV1_CaseSubType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Kingsbridge_General_Custom_Setting__c.Validation_Rule__c = False,
 OR(
  Record_Type_Name__c = &apos;Implementation&apos;,
  Record_Type_Name__c = &apos;Customer Support&apos;
  ),
 ISBLANK(TEXT(Case_Sub_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Case_Sub_Type__c</errorDisplayField>
    <errorMessage>CV1: Case Sub-Type is Required</errorMessage>
</ValidationRule>