force-app/main/default/objects/Case/validationRules/CV2_CancellationRequireReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CV2_CancellationRequireReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Kingsbridge_General_Custom_Setting__c.Validation_Rule__c = False,
$RecordType.Name = &apos;Cancellation&apos;,
ISCHANGED(Status),
ISBLANK(tEXT(Cancellation_Reason__c)),
TEXT(Status) = &apos;Closed&apos;
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>CV1: Please select a Cancellation Reason.</errorMessage>
</ValidationRule>