force-app/main/default/objects/Case/validationRules/CV3_ClosedRequireReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CV3_ClosedRequireReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Kingsbridge_General_Custom_Setting__c.Validation_Rule__c = False,
$RecordType.Name = &apos;Customer Support&apos;,
ISCHANGED(Status),
ISBLANK(TEXT(Close_Reason__c)),
TEXT(Status) = &apos;Closed&apos;
)</errorConditionFormula>
    <errorDisplayField>Close_Reason__c</errorDisplayField>
    <errorMessage>CV3: Please select a Close Reason.</errorMessage>
</ValidationRule>