force-app/main/default/objects/Case/listViews/Adrian_OmniChannel_Cases.listView-meta.xml
<ListView>
    <fullName>Adrian_OmniChannel_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>New Business - Contractor</value>
    </filters>
    <label>Adrian OmniChannel Cases NB Q</label>
</ListView>