force-app/main/default/objects/Case/listViews/All_Open_Cases_SLA.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_SLA</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>SLA_Timer_Image__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Cases (SLA)</label>
</ListView>