force-app/main/default/objects/Case/listViews/API_Errors_Queue_Case.listView-meta.xml
<ListView>
    <fullName>API_Errors_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>API Errors Queue</label>
    <queue>API_Errors_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>