force-app/main/default/objects/Case/listViews/Claims_Escalation_Case.listView-meta.xml
<ListView>
    <fullName>Claims_Escalation_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Claims - Escalation</label>
    <queue>Claims_Escalation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>