force-app/main/default/objects/Case/listViews/Complaints_Customer_Service.listView-meta.xml
<ListView>
    <fullName>Complaints_Customer_Service</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Complaint</value>
    </filters>
    <filters>
        <field>Case_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Customer Service</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Complaints - Customer Service - ZM TEST</label>
</ListView>