force-app/main/default/objects/Case/listViews/Complaints_Escalation_Case.listView-meta.xml
<ListView>
    <fullName>Complaints_Escalation_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints Escalation</label>
    <queue>Complaints_Escalation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>