force-app/main/default/objects/Case/listViews/Copy_of_Adrian_OmniChannel_Cases_CS_Q.listView-meta.xml
<ListView>
    <fullName>Copy_of_Adrian_OmniChannel_Cases_CS_Q</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Customer Support</value>
    </filters>
    <label>Adrian OmniChannel Cases CS Q</label>
</ListView>